Updated some things, added another post.

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -27,6 +27,9 @@
         {{ content }}
       </div>
     </div>
+    <div id='footer'>
+      Copyright &copy; 2009 Michael Bleigh. Some rights reserved.
+    </div>
     <script type="text/javascript">
     //<![CDATA[
     (function() {
