Added dynamic pulling of GitHub projects via JS.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,4 +20,7 @@ layout: master
   </table>
 </div>
 
+<script type="text/javascript" charset="utf-8">
+  var disqus_url = "http://www.mbleigh.com/{{page.url}}";
+</script>
 <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/misterbleigh/embed.js"></script><noscript><a href="http://misterbleigh.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
