--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -6,6 +6,8 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Mister Bleigh - {{ page.title }}</title>
     <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8"/>
+    <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/javascripts/jquery.github.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <div id='wrapper'>
@@ -19,16 +21,18 @@
           <li><a href='/blog.html'>Blog</a></li>
           <li><a href='/about.html'>About</a></li>
           <li><a href='/open-source.html'>Open Source</a></li>
+          <li><a href='http://github.com/mbleigh' target='_blank' rel='me'>GitHub</a></li>
           <li><a href='http://www.linkedin.com/in/mbleigh' target='_blank' rel='me'>LinkedIn</a></li>
           <li><a href='http://twitter.com/mbleigh' target='_blank' rel='me'>Twitter</a></li>
         </ul>
       </div>
       <div id='content'>
         {{ content }}
+        <div class='clearfix'></div>
       </div>
     </div>
     <div id='footer'>
-      Copyright &copy; 2009 Michael Bleigh. Some rights reserved.
+      Copyright &copy; 2009 Michael Bleigh. Some rights reserved. Hosted by <a href='http://github.com/mbleigh/mbleigh.github.com/' target='_blank'>GitHub</a> and powered by <a href='http://github.com/mojombo/jekyll'>Jekyll</a>.
     </div>
     <script type="text/javascript">
     //<![CDATA[
