Adding RSS links and <link>. D'oh.

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8"/>
     <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/javascripts/jquery.github.js" type="text/javascript" charset="utf-8"></script>
+    <link rel='alternate' type='application/rss+xml' href='http://feeds2.feedburner.com/mbleigh' />
   </head>
   <body>
     <div id='wrapper'>
