--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -207,10 +207,12 @@ div.related {
 }
 
 .repo {
-  background: #eee;
+  background: #fff5cc;
+  border: 2px solid #dba;
   padding: 0.7em 1em;
   font-size: 0.8em;
-  margin: 1em 0;
+  letter-spacing: -0.03em;
+  margin: 1em 1em 0 0;
   -moz-border-radius: 0.5em;
   -webkit-border-radius: 0.5em;
   border-radius: 0.5em;
@@ -222,12 +224,13 @@ div.related {
   font-weight: bold;
   color: black;
   letter-spacing: 0;
+  font-size: 1.1em;
 }
 
 #github-projects.big .repo {
   float: left;
-  width: 15.5em;
-  margin: 0.8em 0.7em;
+  width: 25.2em;
+  margin: 1.2em 1em 0 0;
   display: inline-block;
   float: none;
   vertical-align: top;
