--- a/stylesheets/master.css
+++ b/stylesheets/master.css
@@ -180,11 +180,15 @@ div.related {
 
 #footer {
   background-position: top;
-  margin-bottom: 0;
+  margin: 2em auto 1em;
+  width: 960px;
   color: #444;
   font-size: 0.9em;
-  padding: 0.5em;
+  padding: 0.5em 0;
   text-align: center;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
 }
 
 #footer a {
