Tweaks to new styles, adding Pygments syntax highlighting, and adding CouchDB Lucene post.

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Mister Bleigh - {{ page.title }}</title>
     <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen" charset="utf-8"/>
+    <link rel="stylesheet" href="/stylesheets/syntax.css" type="text/css" media="screen" charset="utf-8"/>
     <script src="/javascripts/jquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="/javascripts/jquery.github.js" type="text/javascript" charset="utf-8"></script>
     <link rel='alternate' type='application/rss+xml' href='http://feeds2.feedburner.com/mbleigh' />
